Always fork a new JVM when running tests cases.
Both test suites are initialized back-to-back before any tests are run.  During initialization, they'll
create the TPC-H tables.  AccumuloClient contains a Connector singleton, so running in the same JVM will
cause the tests suites to use the same MiniAccumuloCluster, which will cause one to create tables
that already exist.  By forking all tests to a new JVM, each test suite will get their own MAC instance.

--- a/presto-accumulo/pom.xml
+++ b/presto-accumulo/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <accumulo.version>1.6.2</accumulo.version>
         <air.main.basedir>${project.parent.basedir}</air.main.basedir>
+        <air.test.fork-mode>always</air.test.fork-mode>
         <curator.version>2.9.1</curator.version>
         <jackson.version>2.4.4</jackson.version>
         <junit.version>4.12</junit.version>
