Add support for Postgres ANY/SOME predicate clause, including predicate pushdown

--- a/presto-accumulo/pom.xml
+++ b/presto-accumulo/pom.xml
@@ -370,5 +370,10 @@
             <artifactId>log-manager</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
